# railengine-examples

./: .gitignore  README.md
.github/linters/: .isort.cfg
.github/workflows/: super-linter.yml
CSharp/: README.md
CSharp/Examples/RailenginePoweredStatusPage/: Program.cs  README.md  (+4 more)
MicroPython/: README.md  main.py  railengine_ingest.py  secrets.pyi
Micropython/: README.md
Python/: README.md
Python/customer-support/: .env.example  README.md  engine-schema.json  pyproject.toml
Python/customer-support/fixtures/tickets/: pending_001.json  resolved_auth_001.json  resolved_billing_001.json  resolved_billing_002.json  ticket_001.json  ticket_002.json
Python/customer-support/src/: __init__.py  streamlit_app.py  streamlit_common.py
Python/customer-support/src/agents/: __init__.py  tools.py  triage_agent.py
Python/customer-support/src/config/: __init__.py  env.py
Python/customer-support/src/controllers/: __init__.py  webhook.py
Python/customer-support/src/controllers/cli/: ingest.py  triage.py
Python/customer-support/src/customer_support/: _env.py  agent.py  ingest.py  models.py  rail_payload.py  runtime.py  streamlit_app.py  tools.py  triage.py  triage_runner.py  webhook_receiver.py
Python/customer-support/src/models/: __init__.py  ticket.py  ticket_page.py  triage.py
Python/customer-support/src/pages/: __init__.py  dashboard.py  ingest_page.py  triage_agent_page.py
Python/customer-support/src/repositories/: __init__.py  mappers.py  ticket_repository.py
Python/customer-support/src/services/: __init__.py  ingest_service.py  ticket_list_service.py  triage_service.py
TypeScript/nextjs-expense-tracker/: engine-schema.json  package.json
TypeScript/nextjs-expensify/: .env.example  .gitignore  README.md  components.json  package.json  tailwind.config.mjs
TypeScript/nextjs-food-diary/: .env.example  README.md  engine-schema.json  package.json
nanoframework/: README.md
(+61 files in other folders)
