[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-triage"
version = "0.1.0"
description = "Customer support triage demo: Railengine ingest + search + Railtracks agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rail-engine>=0.2.1",
    "rail-engine-ingest>=0.2.1",
    "railtracks>=1.3.0",
    "pydantic>=2.0",
    "streamlit>=1.57.0",
    "watchdog>=6.0.0",
]

[project.scripts]
support-ingest = "customer_support.ingest:main_sync"
support-triage = "customer_support.triage:main_sync"

[tool.setuptools.packages.find]
where = ["src"]
